[package]
authors = ["Pierre-Luc Manteaux <pierre-luc.manteaux@gmail.com>"]
name = "gl-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.18.0", features = ["full"] }
clap = { version = "3.1.15", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.23"
toml = "0.5.9"
git2 = "0.14"
