[package]
name = "grrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99" }
clap = { version = "4.0", features = ["derive"] }
env_logger = { version = "0.11.8" }
log = { version = "0.4.27" }

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
predicates = "3.1.0"
